--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
   <!--Navbar  *****************************************************************************************-->
   <!-- panier -->
   <div class="shopping-cart">
+    <table class="table">
+
+      <tr>
+        <td class="td">Picture</td>
+        <td class="td">Label</td>
+        <td class="td">Price</td>
+        <td class="td">Quantity</td>
+        <td class="td">Total</td>
+        <td>Remove</td>
+
+      </tr>
+
+    </table>
     <!-- Product #1 -->
 
     <!-- <div class="item">
@@ -423,13 +436,14 @@
 
         <div class="input-contact">
           <input class="name" type="text" placeholder="Enter Your Name">
-          <!-- <h6 class="filde">ll</h6> -->
           <input class="email" type="text" placeholder="Enter a valid email address">
+
           <textarea class="message" id="story" rows="4" cols="50" placeholder="Enter your message"></textarea>
 
         </div>
+        <input class="msg" value="msg">
         <div class="button-contact">
-
+          
           <button> SUBMIT</button>
         </div>
       </div>
