--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -104,7 +104,7 @@
           <h1>Order from <b>"Online Foods"</b> ...</h1>
           <div class="input-img">
             <input type="text" class="search" placeholder="Search your Favorite Food" aria-label="Search for answers">
-            <img src="/img/search.png" width="30px" height="30px">
+            <img src="img/search.png" width="30px" height="30px">
           </div>
 
         </div>
@@ -112,12 +112,12 @@
           <div class="carousel-item">
             <img src="img/bg3.jpeg" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
             <img src="img/bg5.jpeg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
+          </div> -->
+          <!-- <div class="carousel-item">
             <img src="img/bg2.jpeg" class="d-block w-100" alt="...">
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -253,7 +253,7 @@
 
     <div class="container">
       <div class="card">
-        <img src="/img/fc20.jpeg">
+        <img src="img/fc20.jpeg">
         <div class="content">
           <h2>Rice</h2>
           <h4>$12.00</h4>
@@ -266,7 +266,7 @@
       </div>
 
       <div class="card">
-        <img src="/img/fc3.jpeg">
+        <img src="img/fc3.jpeg">
         <div class="content">
           <h2>Chiken</h2>
           <h4>$10.00</h4>
@@ -277,7 +277,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc4.jpeg">
+        <img src="img/fc4.jpeg">
         <div class="content">
           <h2>Fruits</h2>
           <h4>$15.00</h4>
@@ -287,7 +287,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc6.jpeg">
+        <img src="img/fc6.jpeg">
         <div class="content">
           <h2>Cakes</h2>
           <h4>$9.00</h4>
@@ -297,7 +297,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc7.jpeg">
+        <img src="img/fc7.jpeg">
         <div class="content">
           <h2>Roti </h2>
           <h4>$22.00</h4>
@@ -307,7 +307,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc8.jpeg">
+        <img src="img/fc8.jpeg">
         <div class="content">
           <h2>Desserts</h2>
           <h4>$12.00</h4>
@@ -317,7 +317,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc9.jpeg">
+        <img src="img/fc9.jpeg">
         <div class="content">
           <h2>Sandwich</h2>
           <h4>$8.00</h4>
@@ -327,7 +327,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc22.jpeg">
+        <img src="img/fc22.jpeg">
         <div class="content">
           <h2>Cocacola</h2>
           <h4>$17.00</h4>
@@ -337,7 +337,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc12.jpeg">
+        <img src="img/fc12.jpeg">
         <div class="content">
           <h2>Ice Creams</h2>
           <h4>$6.00</h4>
@@ -347,7 +347,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc14.jpeg">
+        <img src="img/fc14.jpeg">
         <div class="content">
           <h2>Biryani</h2>
           <h4>$25.00</h4>
@@ -357,7 +357,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc18.jpeg">
+        <img src="img/fc18.jpeg">
         <div class="content">
           <h2>Noodles</h2>
           <h4>$16.00</h4>
@@ -368,7 +368,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="/img/fc13.jpeg">
+        <img src="img/fc13.jpeg">
         <div class="content">
           <h2>Burgers</h2>
           <h4>$19.00</h4>
@@ -455,7 +455,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer">
-      <h4>&copy; 2022 Privacy policy</h4>
+      <h4>&copy; 2023 Privacy policy</h4>
     </div>
   </footer>
   <!--Footer  *****************************************************************************************-->
@@ -463,7 +463,7 @@
 
 
 
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
